[package]
name = "rust-api-client"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.6", package = "gtk4" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"